--- a/style_readable.css
+++ b/style_readable.css
@@ -1858,15 +1858,121 @@ form .btn:hover {
 @media(max-width:450px) {
     html {
         font-size: 50%;
+        /* scroll-behavior: auto; */
     }
 
     .wrapper {
-        width: 92vw;
+        width: 91vw;
+        margin: 7rem 12% 3rem 4%;
     }
 
     .input-box input {
         width: 100%;
     }
+
+    .shirt-text {
+        left: 98px;
+        top: -3rem;
+    }
+
+    .home-detail h3 {
+        font-size: 2.1rem;
+    }
+
+    .head {
+        margin-left: -67px;
+        align-items: center;
+    }
+
+    .body {
+        top: 160px;
+        align-items: center;
+    }
+
+    .projects {
+        min-width: 45.9rem;
+    }
+
+    .home-img img {
+        width: 90vw;
+    }
+
+    .about {
+        width: 48rem;
+    }
+
+    .about-img img {
+        width: 75vw;
+        margin-left: -41px;
+    }
+
+
+    .header {
+        padding: 3rem 16%;
+        margin-left: -40px;
+        position: absolute;
+    }
+
+    .navbar {
+        padding: 1rem 7%;
+        margin: 3rem 0 0 6rem;
+    }
+
+    .triangle-light {
+        display: none;
+    }
+
+    .head {
+        margin-left: -80px;
+        top: 24rem;
+    }
+
+    .music-note#one {
+        margin-left: -112px;
+    }
+
+    .music-note#two {
+        margin-left: 139px;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    .background-circle {
+        width: 300px;
+        height: 300px;
+        left: 2rem;
+        top: 7rem;
+        margin-bottom: 8rem;
+    }
+
+    .music-note {
+        font-size: 120px;
+    }
+
+    .header .logo-box {
+        position: absolute;
+        top: 2rem;
+    }
+
+    #menu {
+        position: absolute;
+        left: 44rem;
+        top: 3.8rem;
+    }
+
+
+    .border-circle {
+        display: none;
+    }
+
+
 }
 
 @media (max-width:365px) {
